archive: move pre-GPU-arc entries (2026-05-17 → 2026-05-25) to JOURNAL_ARCHIVE.md
Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>